Misc test code cleanup